# DRaft

./: README.md  pyproject.toml
draft/: __init__.py  __main__.py  audit.py  bootstrap.py  cli.py  config.py  cycle.py  ext_api.py  group.py  logging.py  plan.py  policy.py  util.py  vcs.py  watcher.py
draft/adapters/: __init__.py  factory.py  openai.py
solodev/: __init__.py  __main__.py  audit.py  bootstrap.py  cli.py  config.py  cycle.py  ext_api.py  group.py  logging.py  plan.py  util.py  vcs.py  watcher.py
solodev/adapters/: __init__.py  anthropic.py  factory.py  google.py  ollama.py
