[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solodev-cli"
version = "0.1.0"
description = "SoloDev CLI automates commit and push cycles."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SoloDev Team"}]
dependencies = [
    "click>=8.1",
    "watchdog>=3.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/example/solodev"

[project.scripts]
solodev = "solodev.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solodev*"]
